syntax="proto3";

package qrtz_locks;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
message QrtzLocks {
  string  sched_name=1;
  string  lock_name=2;
}

// Generated according to https://cloud.google.com/apis/design/standard_methods
service QrtzLocksService {
  rpc ListQrtzLockss(ListQrtzLockssRequest) returns (ListQrtzLockssResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/QrtzLockss"
    };
  }

  rpc GetQrtzLocks(GetQrtzLocksRequest) returns (QrtzLocks) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=QrtzLockss/*}"
    };
  }

  rpc CreateQrtzLocks(CreateQrtzLocksRequest) returns (QrtzLocks) {
    option (google.api.http) = {
      post: "/v1alpha1/QrtzLockss"
      body: "QrtzLocks"
    };
  }

  rpc UpdateQrtzLocks(UpdateQrtzLocksRequest) returns (QrtzLocks) {
    option (google.api.http) = {
      patch: "/v1alpha1/{QrtzLocks.name=QrtzLockss/*}"
      body: "QrtzLocks"
    };
  }

  rpc DeleteQrtzLocks(DeleteQrtzLocksRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=QrtzLockss/*}"
    };
  }
}

// message QrtzLocks {
// ! This should be defined elsewhere
// }

message ListQrtzLockssRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListQrtzLockssResponse {
  // The field name should match the noun "QrtzLocks" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated QrtzLocks QrtzLockss = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetQrtzLocksRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateQrtzLocksRequest {
  // The parent resource name where the QrtzLocks is to be created.
  string parent = 1;

  // The QrtzLocks id to use for this QrtzLocks.
  string QrtzLocks_id = 2;

  // The QrtzLocks resource to create.
  // The field name should match the Noun in the method name.
  QrtzLocks QrtzLocks = 3;
}

message UpdateQrtzLocksRequest {
  // The QrtzLocks resource which replaces the resource on the server.
  QrtzLocks QrtzLocks = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteQrtzLocksRequest {
  // The resource name of the QrtzLocks to be deleted.
  string name = 1;
}
